@@ -1,0 +1,54 @@
+#import "AKColorProvider.h"
+
+@implementation AKColorProvider
+
+- (void)colorForValue:(double)value
+                  red:(CGFloat *)red
+                green:(CGFloat *)green
+                 blue:(CGFloat *)blue
+                alpha:(CGFloat *)alpha
+{
+    static int maxVal = 255;
+    if (value > 1) {
+        value = 1;
+    }
+    
+    value = sqrt(value);
+    
+    if (value < kSBAlphaPivotY) {
+        *alpha = value * kSBAlphaPivotY / kSBAlphaPivotX;
+    } else {
+        *alpha = kSBAlphaPivotY + ((kSBMaxAlpha - kSBAlphaPivotY) / (1 - kSBAlphaPivotX)) * (value - kSBAlphaPivotX);
+    }
+    
+    //formula converts a number from 0 to 1.0 to an rgb color.
+    //uses MATLAB/Octave colorbar code
+    if (value <= 0) {
+        *red = *green = *blue = *alpha = 0;
+    } else if (value < 0.125) {
+        *red = *green = 0;
+        *blue = 4 * (value + 0.125);
+    } else if (value < 0.375) {
+        *red = 0;
+        *green = 4 * (value - 0.125);
+        *blue = 1;
+    } else if (value < 0.625) {
+        *red = 4 * (value - 0.375);
+        *green = 1;
+        *blue = 1 - 4 * (value - 0.375);
+    } else if (value < 0.875) {
+        *red = 1;
+        *green = 1 - 4 * (value - 0.625);
+        *blue = 0;
+    } else {
+        *red = MAX(1 - 4 * (value - 0.875), 0.5);
+        *green = *blue = 0;
+    }
+    
+    *alpha *= maxVal;
+    *blue *= *alpha;
+    *green *= *alpha;
+    *red *= *alpha;
+}
+
+@end
