@@ -1,0 +1,5 @@
+#import "AKColorProvider.h"
+
+@interface AKDiffColorProvider : AKColorProvider
+
+@end
