@@ -1,0 +1,8 @@
+#import "AKHeatmap.h"
+
+@interface AKDiffHeatmap : AKHeatmap
+
+- (void)setBeforeData:(NSDictionary *)before
+            afterData:(NSDictionary *)after;
+
+@end
