@@ -1,0 +1,6 @@
+#import <MapKit/MapKit.h>
+#import "AKHeatmap.h"
+
+@interface AKHeatmapRenderer : MKOverlayRenderer
+
+@end
