@@ -1,1 +1,3 @@
 #import "AKCustomView.h"
+#import "AKHeatmap.h"
+#import "AKHeatmapRenderer.h"
